--- a/extension/panel.css
+++ b/extension/panel.css
@@ -1,35 +1,188 @@
 body{
-
+overflow: hidden;
+background-color: #81878D;
 }
 
+#slide-panel {
+    width:300px;
+    height:100%;
+    padding:10px;
+    background:#eee;
+    margin-left:100%;
+    position: absolute;
+    top: 0;
+    right: -300px;
+}
+#opener {
+    float:left;
+    padding: 5px;
+    padding-top:35%;
+    margin:-10px -50px 0px -35px;
+    border-radius:0;
+    height: 95%;
+}
 
 #Pane-1{
-	float:left;
-	width:33%;
-	height:100%;
-	padding: 5px;
+	padding:5px;
+	position: absolute;
+	width: 250px;
+	height:95%;
 	margin:5px;
-	background-color: #D6DDE5;
+	background-color: #E2E2E6;
 }
 #Pane-2{
-	float:left;
-	width:33%;
-	height:100%;
+	position: absolute;
+	left: 260px;
+	width: 75%;
+	height:95%;
 	padding: 5px;
-	margin:5px;
-	background-color: #D6DDE5;
+	margin-left:5px;
+	margin-right:5px;
+	margin-top : 5px;
+	background-color: #E2E2E6;
+	overflow-x: scroll;
 }
 
-#Pane-3{
-	float:left;
-	width:31%;
-	height:100%;
-	padding: 5px;
-	margin:5px;
-	background-color: #D6DDE5;
+.table {
+	margin:0px;padding:0px;
+	width:100%;
+	min-width:600px;
+	border:1px solid #c1c1c1;
+	
+	-moz-border-radius-bottomleft:0px;
+	-webkit-border-bottom-left-radius:0px;
+	border-bottom-left-radius:0px;
+	
+	-moz-border-radius-bottomright:0px;
+	-webkit-border-bottom-right-radius:0px;
+	border-bottom-right-radius:0px;
+	
+	-moz-border-radius-topright:0px;
+	-webkit-border-top-right-radius:0px;
+	border-top-right-radius:0px;
+	
+	-moz-border-radius-topleft:0px;
+	-webkit-border-top-left-radius:0px;
+	border-top-left-radius:0px;
 }
 
+.table table{
+    border-collapse: collapse;
+        border-spacing: 0;
+	width:100%;
+	height:100%;
+	margin:0px;padding:0px;
+}
 
+.table tr:last-child td:last-child {
+	-moz-border-radius-bottomright:0px;
+	-webkit-border-bottom-right-radius:0px;
+	border-bottom-right-radius:0px;
+}
+
+.table table tr:first-child td:first-child {
+	-moz-border-radius-topleft:0px;
+	-webkit-border-top-left-radius:0px;
+	border-top-left-radius:0px;
+}
+
+.table table tr:first-child td:last-child {
+	-moz-border-radius-topright:0px;
+	-webkit-border-top-right-radius:0px;
+	border-top-right-radius:0px;
+}
+
+.table tr:last-child td:first-child{
+	-moz-border-radius-bottomleft:0px;
+	-webkit-border-bottom-left-radius:0px;
+	border-bottom-left-radius:0px;
+}
+
+.table tr:hover td{
+	
+}
+
+.table tr:nth-child(odd){ background-color:#f6f6f6; }
+
+.table tr:nth-child(even)    
+{ background-color:#ffffff; }
+
+.table td{
+	vertical-align:middle;
+	border:1px solid #c1c1c1;
+	border-width:0px 1px 1px 0px;
+	text-align:left;
+	padding:7px;
+	font-size:13px;
+	font-family:Helvetica;
+	font-weight:normal;
+	color:#000000;
+}
+
+.table tr:last-child td{
+	border-width:0px 1px 0px 0px;
+}
+
+.table tr td:last-child{
+	border-width:0px 0px 1px 0px;
+}
+
+.table tr:last-child td:last-child{
+	border-width:0px 0px 0px 0px;
+}
+
+.table tr:first-child td{
+		background:-o-linear-gradient(bottom, #e8e8e8 5%, #e8e8e8 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #e8e8e8), color-stop(1, #e8e8e8) );
+	background:-moz-linear-gradient( center top, #e8e8e8 5%, #e8e8e8 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#e8e8e8", endColorstr="#e8e8e8");	background: -o-linear-gradient(top,#e8e8e8,e8e8e8);
+
+	background-color:#e8e8e8;
+	border:0px solid #c1c1c1;
+	text-align:center;
+	border-width:0px 0px 1px 1px;
+	font-size:15px;
+	font-family:Helvetica;
+	font-weight:bold;
+	color:#000000;
+}
+
+.table tr:first-child:hover td{
+	background:-o-linear-gradient(bottom, #e8e8e8 5%, #e8e8e8 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #e8e8e8), color-stop(1, #e8e8e8) );
+	background:-moz-linear-gradient( center top, #e8e8e8 5%, #e8e8e8 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#e8e8e8", endColorstr="#e8e8e8");	background: -o-linear-gradient(top,#e8e8e8,e8e8e8);
+
+	background-color:#e8e8e8;
+}
+.table tr:first-child td:first-child{
+	border-width:0px 0px 1px 0px;
+}
+.table tr:first-child td:last-child{
+	border-width:0px 0px 1px 1px;
+}
+
+#socketList{
+	padding: 0px;
+	list-style-type: none;
+	width: 100%;
+	text-align: center;
+}
+
+#socketList li{
+	border-radius: 3px;
+	border-color: #A4ACB4;
+	border-style: solid;
+	border-width: 1px;
+	border-bottom: 0px;
+	padding: 5px;
+	width:100%;
+	background-color: white;
+}
+
+#socketList li:last-child{
+	border-bottom: 1px;
+	border-color: #A4ACB4;
+	border-style: solid;
+}
 /*b{font-size: 110%;}
 em{color: red;}
 
