--- a/extension/panel.css
+++ b/extension/panel.css
@@ -4,22 +4,22 @@ body {
 }
 
 #slide-panel {
-    width:300px;
-    height:100%;
-    padding:10px;
-    background:#eee;
-    margin-left:100%;
-    position: absolute;
-    top: 0;
-    right: -300px;
+	width:300px;
+	height:100%;
+	padding:10px;
+	background:#eee;
+	margin-left:100%;
+	position: absolute;
+	top: 0;
+	right: -300px;
 }
 #opener {
-    float:left;
-    padding: 5px;
-    padding-top:35%;
-    margin:-10px -50px 0px -35px;
-    border-radius:0;
-    height: 95%;
+	float:left;
+	padding: 5px;
+	padding-top:35%;
+	margin:-10px -50px 0px -35px;
+	border-radius:0;
+	height: 95%;
 }
 
 #Pane-1{
@@ -67,8 +67,8 @@ body {
 }
 
 .table table{
-    border-collapse: collapse;
-        border-spacing: 0;
+	border-collapse: collapse;
+		border-spacing: 0;
 	width:100%;
 	height:100%;
 	margin:0px;padding:0px;
@@ -144,6 +144,7 @@ body {
 	font-family:Helvetica;
 	font-weight:bold;
 	color:#000000;
+    width: 80px;
 }
 
 .table tr:first-child:hover td{
@@ -174,9 +175,21 @@ body {
 	border-width: 1px;
 	border-bottom: 0px;
 	padding: 5px;
-	width:100%;
-	background-color: white;
-  cursor: pointer;
+	width: 100%;
+    background-color: white;
+}
+
+#socketList li a{
+    cursor: default;
+}
+
+#socketList li.active a{
+    color: inherit;
+}
+
+#socketList li.active a:hover{
+    text-decoration: none;
+    color: inherit;
 }
 
 #socketList li:last-child{
